<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vt6002cem.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_product_detail"
            app:destination="@id/navigation_product_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_edit_post"
            app:destination="@id/navigation_edit_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.example.vt6002cem.ui.productDetail.ProductDetailFragment"
        android:label="@string/ProductDetail"
        tools:layout="@layout/fragment_product_detail" >

    </fragment>

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="com.example.vt6002cem.ui.post.CreatePostFragment"
        android:label="@string/createPost"
        tools:layout="@layout/fragment_create_post" >

    </fragment>

    <fragment
        android:id="@+id/navigation_edit_post"
        android:name="com.example.vt6002cem.ui.post.EditPostFragment"
        android:label="@string/editPost"
        tools:layout="@layout/fragment_edit_post" >

    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.example.vt6002cem.ui.shoppingCart.ShoppingCartFragment"
        android:label="@string/title_soppingCart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.vt6002cem.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.vt6002cem.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >

    </fragment>
</navigation>