<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.vt6002cem.ui.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/about_bg_color"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/about_bg_color"
            android:orientation="vertical"

            tools:context=".ui.settings.SettingsFragment">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/orange" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/avatar_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/ic_image_placeholder_foreground" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toEndOf="@+id/avatar_img"
                    android:gravity="center_vertical"
                    android:text="@{viewModel.user.email}"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toEndOf="@+id/email"
                    android:onClick="signOut"
                    app:iconTint="@color/red"
                    app:icon="@drawable/ic_baseline_exit_to_app_24" />


            </RelativeLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/changePwd"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/PasswordRequiredLabel"
                            app:endIconMode="password_toggle"
                            app:errorEnabled="true"
                            app:helperTextTextColor="@color/design_default_color_error"
                            app:passwordValidator="@{viewModel.user.password}"
                            app:startIconDrawable="@drawable/ic_baseline_lock_24"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:text="@={viewModel.user.password}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/confirmPassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            confirmPasswordValidator="@{viewModel.user.confirmPassword}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ConfirmPasswordRequiredLabel"
                            app:endIconMode="password_toggle"
                            app:errorEnabled="true"
                            app:helperTextTextColor="@color/design_default_color_error"
                            app:passwordValidator="@{viewModel.user.password}"
                            app:startIconDrawable="@drawable/ic_baseline_lock_24"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:text="@={viewModel.user.confirmPassword}" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{viewModel.changePwdFormSave}"
                            android:text="@string/save" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/changeProfile"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/displayname"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/displayNameRequired"
                            app:textValidator="@{viewModel.user.displayName}"
                            app:errorEnabled="true"
                            app:helperTextTextColor="@color/design_default_color_error"
                            app:startIconDrawable="@drawable/ic_baseline_person_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/displaynameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:text="@={viewModel.user.displayName}" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checkedButton="@+id/radio_button_1"
                            android:orientation="horizontal"
                            >

                            <RadioButton
                                android:id="@+id/user"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user"
                                android:buttonTint="@color/purple_500"
                                android:value="user"
                                android:onClick="@{(v) -> viewModel.selectOption(radioGroup,v)}"
                                />

                            <RadioButton
                                android:id="@+id/staff"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/staff"
                                android:buttonTint="@color/purple_500"
                                android:value="staff"
                                android:onClick="@{(v) -> viewModel.selectOption(radioGroup,v)}"
                                />

                        </RadioGroup>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/companyCode"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/companyCodeRequired"
                            app:textValidator="@{viewModel.user.companyCode}"
                            app:errorEnabled="true"
                            android:visibility="@{viewModel.user.role==`user`?View.GONE:View.VISIBLE}"
                            app:helperTextTextColor="@color/design_default_color_error"
                            app:startIconDrawable="@drawable/ic_baseline_person_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/companyEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:text="@={viewModel.user.companyCode}" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{viewModel.changeProfileFormSave}"
                            android:text="@string/save" />
                    </LinearLayout>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>




        </LinearLayout>
    </ScrollView>
</layout>